3.6.0 2024xxxx
BF: Settings: Correction to ignore invalid paths in section [FILES]
    Previously, the replacement of the placeholders was terminated without
    error after the first incorrect path and the initialization of the platform
    continued.

3.5.0 20240706
BF: DiskPart: Optimization of attach
    - Name of the volume is no longer relevant
BF: DiskPart: Optimization of detach if an error occurs
BF: DiskPart: Optimization of compact
BF: Platform: Correction if no platform.ini file exists
    - Caused an ArgumentNullException during attachment
CR: Platform: Optimization of output/logging
    - If an error occurs
    - Batch processes (startup / exit) is output in the log file

3.4.0 20240302
BF: Review: Optimization and corrections
BF: DiskPart: Optimization when attaching disks with the same label
BF: DiskPart: Correction when creating with Windows 11
CR: DiskPart: Optimization of detach if an error occurs
CR: Macros: Optimization of the use of WORKDIR
CR: Macros: Usable as direct short commands
CR: Project: Updated TargetFrameworkVersion to v4.8
CR: Platform: Refactoring of the standard directory structure
    - Spaces in the path have been omitted
    - Formerly Database is now part of Storage
    - Formerly Install is now part of Resources
    - Core components of the platform are located in /Programs/Platform
    + Documents
      + Music
      + Pictures
      + Videos
    + Programs
      + Macros
        + macros
      + Platform
    + Resources
    + Settings
    + Storage
    + Temp

3.3.0 20230710
BF: Settings: Spaces at the end of values are now ignored
BF: Launcher: Correction/optimization of the output if the HotKey cannot be registered
CR: Build: Releases are now only available on the release page
CR: Macros: Added to temporarily change the command line configuration
    Create your own macros as cmd-file in Program Portables/Macros/macros.
    Call: 'macro [macro]' or 'macros [macro]' on the command line.