@@ -3,6 +3,7 @@ BF: Settings: Correction to ignore invalid paths in section [FILES]
     Previously, the replacement of the placeholders was terminated without
     error after the first incorrect path and the initialization of the platform
     continued.
+BF: Platform: Names of environment variables are case-sensitive    
 
 3.5.0 20240706
 BF: DiskPart: Optimization of attach
